# wander

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
app/: ai.py  episodes.py  main.py  mcp_server.py  models.py  prompts.py  scenes.py  scoring.py  session.py
app/static/: app.css  app.js
app/templates/: _error.html  base.html  scene.html
bench/: README.md  __init__.py
bench/dpo/: README.md  __init__.py  export.py  fuse.py  prepare.py  push.py  train.py
bench/goldens/: README.md  __init__.py  bfs_shortest_path.rs  binary_search_sorted.rs  bubble_sort.rs  count_vowels.rs  dijkstra_shortest_path.rs  factorial.rs  fibonacci_nth.rs  fizzbuzz.rs  insertion_sort.rs  is_anagram.rs  is_palindrome.rs  kv_store_cli.rs  levenshtein_distance.rs  longest_common_prefix.rs  longest_common_subsequence.rs  markdown_subset.rs  max_in_slice.rs  mergesort.rs  quicksort.rs  reverse_string.rs  roman_to_int.rs  sum_to_n.rs
bench/properties/: README.md  __init__.py  bfs_shortest_path.rs  binary_search_sorted.rs  bubble_sort.rs  count_vowels.rs  dijkstra_shortest_path.rs  insertion_sort.rs  is_anagram.rs  is_palindrome.rs  kv_store_cli.rs  levenshtein_distance.rs  longest_common_prefix.rs  longest_common_subsequence.rs  markdown_subset.rs  max_in_slice.rs  mergesort.rs  quicksort.rs  reverse_string.rs  sum_to_n.rs
bench/runner/: __init__.py  __main__.py  orchestrator.py  report.py  store.py
bench/scripts/: __init__.py  seed_v1_from_mcp.py
bench/specs/: README.md  __init__.py  bfs_shortest_path.toml  binary_search_sorted.toml  bubble_sort.toml  count_vowels.toml  dijkstra_shortest_path.toml  factorial.toml  fibonacci_nth.toml  (+15 more)
harness/: __init__.py  conduct.py  scoring.py
scripts/: migrate_bosun.py  migrate_forest_demo.py  migrate_kq1.py  migrate_locked_garden.py  migrate_lost_tail.py  migrate_quartermaster.py  migrate_road_of_yellow_brick.py  migrate_salvage_run.py
(+18 files in other folders)
