[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanderer"
version = "0.1.0"
description = "AI-driven text adventure engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "ollama>=0.4",
    "fastmcp>=2.0,<3.0",
]

[project.scripts]
wanderer-mcp = "app.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
