[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanderer"
version = "0.1.0"
description = "Conduct client harness — text-adventure engine + code-generation eval flywheel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "ollama>=0.4",
    "fastmcp>=2.0,<3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy Apple-Silicon-only training stack — install on the box that runs
# `bench.dpo.train` / `bench.dpo.fuse` only. `bench.dpo.export` works
# without these (it only needs httpx, already a core dep).
dpo = [
    "mlx-lm>=0.20",
    "huggingface_hub>=0.24",
]

[project.scripts]
wanderer-mcp = "app.mcp_server:main"
bench-runner = "bench.runner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "harness", "bench"]
